fixed some glitches to make it responsive on mobile

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  min-height: 100vh;
-  padding: 40px;
+  min-height: 100dvh;
+  padding: env(safe-area-inset-top) 20px env(safe-area-inset-bottom);
   color: var(--text-main);
   background-image: url(images/db582306ee1ebf6bd169d49c5128d00b.jpg);
   background-size: cover;
@@ -17,13 +17,15 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   font-family: "Inter", "Segoe UI", system-ui, sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .app-container {
   width: 100%;
-  height: 90vh;
-  margin-top: 1rem;
+  min-height: 100%;
+  height: auto;
+  margin-top: 2rem;
   padding: 2em;
   background-color: rgba(255, 255, 255, 0.627);
   backdrop-filter: blur(8px);
@@ -329,34 +331,25 @@ body {
 } */
 
 .task-list {
-  flex: 1;
-  min-height: 0;
+  flex: none; /* stop it from taking all space */
+  max-height: 160px; /* ~2 cards (70px each + gap) */
   overflow-y: auto;
-
   /* STRONG HIGHLIGHT */
   background: linear-gradient(
     145deg,
     rgba(255, 255, 255, 0.25),
     rgba(255, 255, 255, 0.1)
   );
-
   backdrop-filter: blur(12px);
-
   border-radius: 20px;
   padding: 16px;
-
-  /* GLOW BORDER */
   border: 1px solid rgba(255, 255, 255, 0.4);
-
-  /* ELEVATION */
   box-shadow:
     0 15px 40px rgba(0, 0, 0, 0.15),
     inset 0 1px 0 rgba(255, 255, 255, 0.4);
-
   display: flex;
   flex-direction: column;
   gap: 12px;
-
   transition: 0.3s ease;
 }
 
@@ -539,7 +532,7 @@ button {
   font-weight: bold;
   animation: pulse 1s infinite;
 }
-.empty-state img{
+.empty-state img {
   height: 50px;
   width: 50px;
 }
@@ -617,6 +610,7 @@ button {
   /* TASK CARD */
   .task-card {
     padding: 18px;
+    min-height: 80px;
   }
 
   .task-text {
